@@ -3671,9 +3671,12 @@ void DOSBOX_SetupConfigSections(void) {
     Pbool->Set_help("Allow starting commands to run on the Windows host including the use of START command.");
     Pbool->SetBasic(true);
 
-    Pbool = secprop->Add_bool("startwait",Property::Changeable::OnlyAtStart,true);
+    Pbool = secprop->Add_bool("startwait",Property::Changeable::WhenIdle,true);
     Pbool->Set_help("Specify whether DOSBox-X should wait for the Windows programs after they are started.");
     Pbool->SetBasic(true);
+
+    Pbool = secprop->Add_bool("startquiet",Property::Changeable::WhenIdle,false);
+    Pbool->Set_help("If set, DOSBox-X will not show information messages before launching Windows programs to run on the host.");
 
     Pstring = secprop->Add_string("startincon",Property::Changeable::OnlyAtStart,"assoc attrib chcp copy dir echo for ftype help if set type ver vol xcopy");
     Pstring->Set_help("START command will start these commands (separated by space) in a console and wait for a key press before exiting.");
