@@ -46,7 +46,7 @@
 
 static bool first_run=true;
 extern bool use_quick_reboot, mountwarning;
-extern bool startcmd, startwait, winautorun;
+extern bool startcmd, startwait, startquiet, winautorun;
 extern bool enable_config_as_shell_commands;
 extern bool dos_shell_running_program, addovl;
 extern const char* RunningProgram;
@@ -1673,6 +1673,7 @@ void SHELL_Init() {
 		use_quick_reboot = section->Get_bool("quick reboot");
 		enable_config_as_shell_commands = section->Get_bool("shell configuration as commands");
 		startwait = section->Get_bool("startwait");
+		startquiet = section->Get_bool("startquiet");
 		winautorun=startcmd;
 		first_run=false;
     }
